# octetos-neuronal

./: .gitignore  Line-1.data  configure.ac  neuronal-v1.cbp  neuronal.workspace
1/: Backp.hh  Neurona.hh  Perceptron.hh  backp.hh
src/: Layer.hh  Line.hh  Makefile.am  Network.cc  Network.hh  Perceptron.cc  Perceptron.hh  Plot.cc  Plot.hh  bp-neurona.cc  exp-perceptron-circle.cc  exp-perceptron-line.cc  exp-perceptron.cc  exp-regression-line.cc  experement.cc  layer.cc  layer.hh  main.cc  network-bp.cc  network.cc  network.hh  neurona.cc  neurona.hh  neuronal.cc  neuronal.hh  perceptron.cc  perceptron.hh  plot.cc  plot.hh
tests/: main.cc  v0.cc  v0.hh  v1.cc  v1.hh
